Add user auth: login, profile, settings, user menu
- Spring Security config (session-based, CORS, no CSRF)
- UserStore with hardcoded admin/admin and user1/user1
- AuthController: POST /api/auth/login|logout, GET /me, PUT /profile|settings
- React AuthContext (login/logout/updateProfile/updateSettings)
- UserMenu: user icon top-right, dropdown (Profil, Ustawienia, Wyloguj)
- LoginModal, ProfileModal (avatar placeholder + edit), SettingsModal (timezone)
- UserModals.css: dark fantasy styling for all modals and dropdown

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>